--- a/Ansible/multi_play.yml
+++ b/Ansible/multi_play.yml
@@ -1,9 +1,14 @@
-- name: multi play
+- name: multi play1
   hosts: localhost
   task: 
   - name: play1 and task1
     ansible.builtin.debug:
       msg: "Hello from play1 and task1"
+
+
+- name: play2
+  hosts: localhost
+  task:
   - name: play2 and task2
     ansible.builtin.debug:
       msg: "Hello from play2 and task2"        
