--- a/Ansible/variables4.yml
+++ b/Ansible/variables4.yml
@@ -2,7 +2,7 @@
 
 - name: variable declaring with prompts
   hosts: localhost
-  vars_prompts:
+  vars_prompt:
     - name: username
       prompt: please enter username
       private: false
@@ -10,6 +10,6 @@
       prompt: please enter password
       private: true
   tasks:
-  - name: "print variables from arguments"
-    ansible.builtin.debug:
-     msg: "user name is {{username} and password is {{password}}}"     
+    - name: "print variables from arguments"
+      ansible.builtin.debug:
+         msg: "user name is {{username} and password is {{password}}"     
