--- a/Ansible/variables6.yml
+++ b/Ansible/variables6.yml
@@ -5,4 +5,4 @@
   tasks:  
   - name: print variables from command line
     ansible.builtin.debug:
-      -msg: "hello {{person}}, good {{wishes}}"
+      msg: "hello {{person}}, good {{wishes}}"
