--- a/Ansible/loops2.yml
+++ b/Ansible/loops2.yml
@@ -2,6 +2,7 @@
 
 - name: installing packages with loop
   hosts: localhost
+  become: true
   tasks: 
     - name: install packages
       ansible.builtin.package:
