--- a/Ansible/loops3.yml
+++ b/Ansible/loops3.yml
@@ -14,3 +14,7 @@
         - {name: 'mysql', state: 'absent'}
         - {name: 'nginx', state: 'present'}
 
+    - name: start nginx
+      ansible.builtin.service:
+        name: nginx
+        state: started
